--- a/data-ip.cabal
+++ b/data-ip.cabal
@@ -23,7 +23,13 @@ Source-Repository head
   Location: https://github.com/mvv/data-ip.git
 
 Library
-  Build-Depends: base < 5, data-default, data-endian
+  Build-Depends:
+    base          >= 4.3 && < 5,
+    data-default  >= 0.2,
+    data-endian   >= 0.0.1,
+    hashable      >= 1.1,
+    semigroupoids >= 1.2,
+    pointed       >= 2.0
   Hs-Source-Dirs: src
   GHC-Options: -Wall
   Exposed-Modules:
