--- a/data-ip.cabal
+++ b/data-ip.cabal
@@ -29,7 +29,9 @@ Library
     data-endian   >= 0.0.1,
     hashable      >= 1.1,
     semigroupoids >= 1.2,
-    pointed       >= 2.0
+    pointed       >= 2.0,
+    binary        >= 0.5,
+    cereal        >= 0.3
   Hs-Source-Dirs: src
   GHC-Options: -Wall
   Exposed-Modules:
