--- a/data-ip.cabal
+++ b/data-ip.cabal
@@ -24,14 +24,13 @@ Source-Repository head
 
 Library
   Build-Depends:
-    base          >= 4.3 && < 5,
-    data-default  >= 0.2,
-    data-endian   >= 0.0.1,
-    hashable      >= 1.1,
-    semigroupoids >= 1.2,
-    pointed       >= 2.0,
-    binary        >= 0.5,
-    cereal        >= 0.3
+    base         >= 4.3 && < 5,
+    data-default >= 0.2,
+    data-endian  >= 0.0.1,
+    data-dword   >= 0.0.1,
+    hashable     >= 1.1,
+    binary       >= 0.5,
+    cereal       >= 0.3
   Hs-Source-Dirs: src
   GHC-Options: -Wall
   Exposed-Modules:
