--- a/network-ip.cabal
+++ b/network-ip.cabal
@@ -29,12 +29,12 @@ Library
     data-default-class,
     data-endian  >= 0.0.1,
     data-dword   >= 0.2,
-    tagged       >= 0.2,
+    type-hint    >= 0.1,
     hashable     >= 1.1,
     binary       >= 0.5,
     cereal       >= 0.3,
     text-printer >= 0.4,
-    data-textual >= 0.2,
+    data-textual >= 0.3,
     parsers      >= 0.5
   Hs-Source-Dirs: src
   GHC-Options: -Wall
@@ -56,4 +56,3 @@ Test-Suite tests
   Hs-Source-Dirs: tests
   GHC-Options: -Wall
   Main-Is: Tests.hs
-
