--- a/network-ip.cabal
+++ b/network-ip.cabal
@@ -24,18 +24,16 @@ Source-Repository head
 
 Library
   Default-Language: Haskell2010
-  Build-Depends:
-    base         >= 4.3 && < 5,
-    data-default-class,
-    data-endian  >= 0.0.1,
-    data-dword   >= 0.2,
-    type-hint    >= 0.1,
-    hashable     >= 1.1,
-    binary       >= 0.5,
-    cereal       >= 0.3,
-    text-printer >= 0.4,
-    data-textual >= 0.3,
-    parsers      >= 0.5
+  Build-Depends: base >= 4.3 && < 5
+               , data-default-class
+               , data-endian >= 0.0.1
+               , data-dword >= 0.2
+               , type-hint >= 0.1
+               , hashable >= 1.1
+               , data-serializer >= 0.2
+               , text-printer >= 0.4
+               , data-textual >= 0.3
+               , parsers >= 0.5
   Hs-Source-Dirs: src
   GHC-Options: -Wall
   Exposed-Modules:
@@ -45,7 +43,7 @@ Test-Suite tests
   Default-Language: Haskell2010
   Type: exitcode-stdio-1.0
   Build-Depends:
-    base             >= 4 && < 5,
+    base,
     tasty            >= 0.4,
     tasty-quickcheck >= 0.3,
     data-dword,
